[package]
name = "otlp2parquet-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-iceberg = { path = "../otlp2parquet-iceberg", optional = true }

# Storage abstraction
opendal = { version = "0.54.1", default-features = false }

# Arrow for data structures
arrow = { workspace = true }

# Utilities
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
tracing = { version = "0.1", default-features = false, features = ["std"] }
bytes = "1.10"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific: Snappy compression only
parquet = { workspace = true, features = ["arrow", "async", "snap"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native: ZSTD compression + Snappy
parquet = { workspace = true, features = ["arrow", "async", "snap", "zstd"] }
# Async utilities for OpenDAL list operations (native only)
futures-util = "0.3"
# Tokio needed for filesystem backend
tokio = { workspace = true, optional = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
opendal = { version = "0.54.1", default-features = false, features = ["services-memory"] }
bytes = "1.10"
httpmock = "0.7"
serde_json = { workspace = true }

[features]
default = []
# Feature flags for different storage backends
services-s3 = ["opendal/services-s3"]
services-fs = ["opendal/services-fs", "tokio"]
# Iceberg catalog integration (optional)
iceberg = ["dep:otlp2parquet-iceberg"]
