[package]
name = "otlp2parquet-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
icepick = { git = "https://github.com/smithclay/icepick.git", rev = "93178ee27da8f6d8952b8abbe8bb8c308f1c52a7", default-features = false }
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-config = { path = "../otlp2parquet-config" }
arrow = { version = "56.2", default-features = false }
anyhow = "1"
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
parquet = { version = "56.2", default-features = false }
blake3 = "1.5"
serde_json = "1"
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }
once_cell = "1.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opendal = { version = "0.54", default-features = false, features = ["services-fs", "services-s3"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
