[package]
name = "otlp2parquet-writer"
description = "Parquet writer for otlp2parquet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otlp2parquet-common = { workspace = true }
arrow = { workspace = true }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
parquet = { workspace = true }
serde_json = "1"
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }
once_cell = "1.19"
time = { version = "0.3", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["v4", "js"] }
# Ensure WASM builds have a JS RNG source for UUID v4 generation
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opendal = { version = "0.54", default-features = false, features = ["services-fs", "services-s3"] }
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"

[dev-dependencies]
otlp2records = { workspace = true }
arrow = { workspace = true }
tokio = { version = "1", features = ["full"] }
