[package]
name = "generate-parquet-testdata"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
otlp2parquet-core = { path = "../../crates/otlp2parquet-core" }
otlp2parquet-proto = { path = "../../crates/otlp2parquet-proto" }
arrow = { version = "56.2", default-features = false, features = ["ipc"] }
parquet = { version = "56.2", default-features = false, features = ["snap", "arrow", "async"] }
prost = { version = "0.14", default-features = false, features = ["std"] }
